--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Dodo's Todo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
   <body>
-    <ul id="Container" class="main-container list-group"></ul>
+    <ul id="Container" class="main-container list-group text-center col-6 mx-auto my-5"></ul>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
