-Adjust Lighthouse linter to fix unexpected issue. -Revert previous changes to src html file.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Dodo's Todo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="index.js"></script></head>
+  <meta name="viewport" content="width=device-width, initial-scale=1"></head>
   <body>
     <ul id="Container" class="main-container list-group list-group-flush rounded col-6 mx-auto my-5 p-0"></ul>
 
