--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
     <title>Dodo's Todo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
   <body>
-    <ul id="Container" class="main-container list-group list-group-flush rounded col-6 mx-auto my-5 p-0"></ul>
+    <div class="d-flex rounded col-6 col-lg-3 mx-auto mt-5 p-0 mb-1">
+      <input type = "text" id="TodoDesc" class = "rounded col-9 p-0 m-0 text-center" placeholder="What to do?">
+      <button type="button" class="button-style btn col-3 m-0" id="SubmitButton">Submit</button>
+    </div>
+    
+    <ul id="Container" class="main-container list-group list-group-flush rounded col-6 col-lg-3 mx-auto mb-5 p-0"></ul>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
